--- a/index.html
+++ b/index.html
@@ -9,12 +9,13 @@
 
 <body>
 
-<img src="forkit.gif" id="octocat" alt="" />
+<img src="http://bl.ocks.org/lqb2/raw/48e43ee11e8f5b00542a/forkit.gif" id="octocat" alt="" />
 
 <!-- Feel free to change this text here -->
 <p>
   Fork me? Fork you, @octocat!
 </p>
+
 
 </body>
 </html>
